<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Light"
    >

    <FrameLayout
        android:id="@+id/id_layoutForFragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_relativeLayout" />

    <ImageView
        android:id="@+id/id_exit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:src="@drawable/cross"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_help"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_color"
        android:gravity="center"
        android:text="@string/help"
        android:textStyle="bold"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/id_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_Grey"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_color"
            android:text="@string/next"
            android:textStyle="bold"
            android:layout_marginBottom="3dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_color"
            android:text="@string/back"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"/>

    </RelativeLayout>

</RelativeLayout>