<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PlaceSecurity"
    android:background="@drawable/main_layout_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_placeSecurityChildLayout"
        android:padding="15dp"
        android:text="@string/placeSecurityText"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/id_placeSecurityChildLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_background"
        android:paddingTop="30dp"
        android:paddingHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_securityCamerasLayout"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Security Camera(s)"
                android:layout_weight="4"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/id_securityCamerasCheckBox"
                android:src="@drawable/circle"
                android:layout_weight="1"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_weaponsLayout"
            android:orientation="horizontal"
            android:layout_below="@+id/id_securityCamerasLayout"
            android:layout_marginTop="20dp"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Weapons"
                android:layout_weight="4"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/id_weaponsCheckBox"
                android:src="@drawable/circle"
                android:layout_weight="1"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_dangerousAnimalsLayout"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/id_weaponsLayout"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Dangerous Animals"
                android:layout_weight="4"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/id_dangerousAnimalsCheckBox"
                android:src="@drawable/circle"
                android:layout_weight="1"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeSecurityImpThings"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_above="@+id/id_tempPlaceSecurity"
        android:padding="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_tempPlaceSecurity"
        android:text="@string/tempPlaceSecurity"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:background="@drawable/edittext_background_grey_border"
        android:padding="10dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="80dp"
        />

</RelativeLayout>